# core

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE_GUIDE.md  ATTEMPT_TRACKING_IMPLEMENTATION.md  AUTOFIX.md  BUDGET_IMPLEMENTATION.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  CONTRIBUTING_enhanced.md  CREDITS.md  DAYS_6_7_IMPLEMENTATION_REPORT.md  DAY_3_COMPLETION_SUMMARY.md  DEVELOPER_QUICK_START.md  DEVELOPMENT_ALIGNMENT_REPORT.md  DEVELOPMENT_MASTER_PLAN.md  DIAGNOSE_ENHANCEMENT_SUMMARY.md  DISCLAIMER.md  Dockerfile  LICENSE-content.md  LICENSE.md  Makefile  NEXT_STEPS_ACTION_PLAN.md  NOTICE.md  PHASE_1_CHECKLIST.md  PRIVACY.md  PROJECT_WORKFLOW_OVERVIEW.md  QUICK_START.md  README.md  README.md.old.ignoreme  README_V1_REFERENCE.md  REFACTORING_MASTER_PLAN.md  REFACTORING_STRATEGY.md  (+40 more)
v1.reference/: CREDITS.md  NOTICE.md  README.md  README_REFERENCE.md  TERMS.md  pyproject.toml  pytest.ini  requirements.txt
v1.reference/.continue/: config.yaml
v1.reference/.copilot/: CHANGELOG.md  CLEANUP_COMPLETION_REPORT.md  CLI_INTEGRATION_COMPLETE.md  CLI_REORGANIZATION_COMPLETE.md  CODE_REVIEW_REMEDIATION_TRACKER.md  DOCUMENTATION_AUDIT_COMPLETE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  HEXAGONAL_ARCHITECTURE_FIXES_COMPLETED.md  MIGRATION_SUCCESS_REPORT.md  MISSING_FEATURES_ANALYSIS.md  PHASE_1_COMPLETE.md  PHASE_2_CLEANUP_COMPLETE.md  TESTING_STRATEGY_COMPLETE.md  cli_architecture_restructuring.md  code_quality_tracking.md  consolidation_complete.md  development_config.md  phase1_analysis.md  phase1_completion_report.md  phase2_configuration_completion.md  phase2_objectives.md  quality_gates.yaml  utilities_consolidation_plan.md
v1.reference/.copilot/tasks/: README.md
v1.reference/.github/: CODEOWNERS  MODULE_STATUS.md  TASK_REGISTRY.md  copilot-instructions.md
v1.reference/.github/prompts/: architecturereview.prompt.md  async-memory-optimizer.prompt.md  bandaidfix.prompt.md  codefix.prompt.md  codereview.prompt.md  docfix.prompt.md  openchronicle-architecture.prompt.md  overthinking-lite.prompt.md  overthinking.prompt.md  polishcode.prompt.md
v1.reference/.github/workflows/: ci.yml  guardrail-watch.yml
v1.reference/config/: cli_config.json  system_config.json  user_preferences.json
v1.reference/config/models/: NAMING_ARCHITECTURE.md  README.md  anthropic_claude35_haiku.json  anthropic_claude35_sonnet.json  gemini_15_flash.json  gemini_pro.json  groq_llama31_70b.json  groq_mixtral_8x7b.json  my_production_claude.json  ollama_codellama_13b.json  ollama_llama3_1_8b.json  ollama_mistral_7b.json  openai_gpt35_turbo.json  openai_gpt4_turbo.json  openai_gpt4o.json  transformers_dialogpt_medium.json
v1.reference/docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  PHASE5_COMPLETION_REPORT.md
v1.reference/docs/adr/: 0001-comprehensive-architecture-modernization.md  0001-hexagonal-architecture.md  0003-migration-completion-success.md  template.md
v1.reference/docs/architecture/: mock_adapter_architecture.md
v1.reference/docs/archive/: DAY_3_COMPLETION_SUMMARY.md.bak
v1.reference/docs/consolidation/: DOCUMENTATION_CONSOLIDATION_ANALYSIS.md  DOCUMENTATION_CONSOLIDATION_COMPLETION.md
v1.reference/import/: README.md
v1.reference/scripts/architecture/: complete_phase5.py  validate_boundaries.py
v1.reference/src/openchronicle/: __init__.py
v1.reference/src/openchronicle/application/: __init__.py
v1.reference/src/openchronicle/application/commands/: __init__.py
v1.reference/src/openchronicle/application/orchestrators/: __init__.py
v1.reference/src/openchronicle/application/queries/: __init__.py
v1.reference/src/openchronicle/application/services/: model_orchestrator_factory.py
v1.reference/src/openchronicle/bootstrap/: __init__.py
v1.reference/src/openchronicle/domain/: __init__.py
v1.reference/src/openchronicle/domain/entities/: __init__.py
v1.reference/src/openchronicle/domain/errors/: persistence_errors.py
v1.reference/src/openchronicle/domain/models/: configuration_manager.py  mock_implementations.py  model_orchestrator.py
v1.reference/src/openchronicle/domain/ports/: __init__.py  configuration_port.py  content_analysis_port.py  context_port.py  memory_port.py  model_management_port.py  persistence_inmemory.py  persistence_port.py  registry_port.py  storypack_port.py
v1.reference/src/openchronicle/infrastructure/: __init__.py  config.py
v1.reference/src/openchronicle/infrastructure/adapters/: registry_adapter.py
v1.reference/src/openchronicle/infrastructure/cache/: __init__.py
v1.reference/src/openchronicle/infrastructure/images/: __init__.py
v1.reference/src/openchronicle/infrastructure/llm_adapters/: __init__.py
v1.reference/src/openchronicle/infrastructure/memory/: __init__.py  cache_orchestrator.py
v1.reference/src/openchronicle/infrastructure/performance/: __init__.py  orchestrator.py
v1.reference/src/openchronicle/infrastructure/persistence/: __init__.py  async_database_orchestrator.py  database.py  migration.py  (+1 more)
v1.reference/src/openchronicle/plugins/: loader.py
v1.reference/src/openchronicle/settings/: app_settings.py
v1.reference/src/openchronicle/shared/: async_database_operations.py  centralized_config.py  database_operations.py  dependency_injection.py  di_orchestrators.py  error_handling.py  exceptions.py  json_utilities.py  logging_system.py  retry_policy.py  security.py  service_interfaces.py
v1.reference/storage/: README.md
v1.reference/storage/storypacks/demo-story/: meta.json
v1.reference/templates/: README.md  coding_template.json  content_template.json  scene_template.json
v1.reference/tests/contracts/ports/: test_content_analysis_port_contract.py
v1.reference/tests/e2e/cli/: test_story_happy_path.py
v1.reference/tests/integration/core_boot/: test_bootstrap_cli.py  test_core_boot_without_plugins.py
v1.reference/tests/unit/application/: test_app_with_fakes.py
v1.reference/tools/: CopilotTimeout.ps1  copilot_naughty_list_pro.py  naughty_rules.json  protected_words.txt  refactor_oc_split.py
(+1854 files in other folders)
