[project]
name = "openchronicle"
version = "0.1.0"
description = "AI-powered narrative engine and storytelling platform"
authors = [
    {name = "OpenChronicle Team"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "storytelling", "narrative", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    "aioredis>=2.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pip-audit>=2.6.0",
    "coverage>=7.3.0",
]

[project.scripts]
openchronicle = "openchronicle.__main__:main"
openchronicle-legacy = "openchronicle.interfaces.cli.main:main"

[project.urls]
Homepage = "https://github.com/OpenChronicle/openchronicle-core"
Repository = "https://github.com/OpenChronicle/openchronicle-core"
Documentation = "https://openchronicle.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openchronicle"]

[tool.hatch.build.targets.sdist]
include = [
    "src/openchronicle/**",
    "pyproject.toml",
    "README.md",
    "LICENSE*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=src --cov-report=term-missing --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "stress: Stress tests",
    "slow: Slow running tests",
    "asyncio: Asynchronous tests",
    "chaos: Chaos engineering tests",
    "workflow: Workflow tests",
    "session: Session-based tests requiring state management",
    "concurrency: Concurrency and thread-safety tests",
    "requires_models: Tests requiring LLM model access",
    "production: Production environment tests",
        "production_real: Production tests with real adapters",
        "production_mock: Production tests with mocked adapters",
        "smoke: Quick smoke tests",
        "core: Core functionality tests",
        "mock_only: Tests using only mock data",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:transformers.*",
    "ignore::FutureWarning:transformers.*",
    "ignore::UserWarning:torch.*",
    "ignore::UserWarning:transformers.*",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]
fail_under = 85

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "RET504",  # Unnecessary variable assignment before return
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "PLR2004"]  # Test files can have unused args and magic values

[tool.ruff.lint.isort]
known-first-party = ["openchronicle"]
force-single-line = true

[tool.ruff.lint.pylint]
max-args = 7

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
