[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openchronicle-core"
version = "2.0.0-dev"
description = "OpenChronicle v2 orchestration core (clean-slate)."
authors = [{name = "OpenChronicle"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
oc = "openchronicle_core.interfaces.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["openchronicle_core"]

[tool.setuptools.package-data]
openchronicle_core = ["**/*.sql"]
