[project]
name = "openchronicle"
version = "0.1.0"
description = "AI-powered narrative engine and storytelling platform"
authors = [
    {name = "OpenChronicle Team"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "storytelling", "narrative", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
    "aioredis>=2.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "structlog>=24.1.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pip-audit>=2.6.0",
    "coverage>=7.3.0",
    "types-pyyaml>=6.0.0",
    "types-redis>=4.0.0",
    "import-linter>=2.0.0",
]

[project.scripts]
openchronicle = "openchronicle.__main__:main"

[project.urls]
Homepage = "https://github.com/OpenChronicle/openchronicle-core"
Repository = "https://github.com/OpenChronicle/openchronicle-core"
Documentation = "https://openchronicle.readthedocs.io"
"Bug Reports" = "https://github.com/OpenChronicle/openchronicle-core/issues"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openchronicle"]

[tool.hatch.build.targets.sdist]
include = [
    "src/openchronicle/**",
    "tests/**",
    "docs/**",
    "pyproject.toml",
    "README.md",
    "LICENSE*",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--tb=short",
    "--maxfail=10",
    "-ra",
]
markers = [
    "unit: Unit tests - fast, isolated tests",
    "integration: Integration tests - test component interaction",
    "performance: Performance tests - measure speed and resource usage",
    "stress: Stress tests - test system limits",
    "slow: Slow running tests - may take >5 seconds",
    "asyncio: Asynchronous tests",
    "requires_models: Tests requiring LLM model access",
    "requires_redis: Tests requiring Redis",
    "requires_database: Tests requiring database",
    "contract: API contract tests",
    "security: Security-focused tests",
    "chaos: Chaos engineering tests",
    "workflow: Workflow tests",
    "session: Session-based tests requiring state management",
    "concurrency: Concurrency and thread-safety tests",
    "production: Production environment tests",
    "production_real: Production tests with real adapters",
    "production_mock: Production tests with mocked adapters",
    "smoke: Quick smoke tests",
    "core: Core functionality tests",
    "mock_only: Tests using only mock data",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:transformers.*",
    "ignore::FutureWarning:transformers.*",
    "ignore::UserWarning:torch.*",
    "ignore::UserWarning:transformers.*",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
minversion = "7.0"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "*/migrations/*",
    "*/__main__.py",
]
parallel = true
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "class.*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 85
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# Enhanced mypy configuration
[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
namespace_packages = true
explicit_package_bases = true
exclude = ["utilities"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Enhanced ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "utilities",
    "venv",
    "tests",
    # Temporarily exclude unstable modules from lint while refactoring
    "src/openchronicle/application/services/management/bookmark",
]

[tool.ruff.lint]
select = [
    "F",  # pyflakes (correctness)
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "B",  # flake8-bugbear
    "I",  # isort (import sorting)
    "TRY",  # tryceratops (exception anti-patterns)
]
# Keep the ignore list minimal; expand rule coverage incrementally once src is clean.
ignore = [
    "F401",  # Unused imports (temp)
    "F403",  # star imports (temp)
    "F405",  # names from star imports (temp)
    "F811",  # redefinition (temp)
    "F841",  # assigned but unused (temp)
    "F821",  # undefined name (temp during refactors)
    "F402",  # import shadowed by loop variable (temp)
    # Temporary ignores while tightening exception handling
    "TRY003",  # Avoid specifying messages in exception (will phase out)
]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*" = [
    "T20",     # Print statements OK in scripts
    "S106",    # Hardcoded passwords OK in scripts
]
"src/openchronicle/shared/di_orchestrators.py" = ["F403", "F405"]
"src/openchronicle/shared/service_configuration.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["openchronicle"]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 15
max-returns = 8
max-statements = 60

# Enhanced black configuration
[tool.black]
line-length = 120
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # Skip assert_used in tests

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests.py"]
